// Vitest Snapshot v1

exports[`transform > transform script 1`] = `null`;

exports[`transform > transform script js 1`] = `
{
  "code": "<script> export default {name: 'App'}</script><script setup name=\\"App\\">// placeholder </script>",
  "map": SourceMap {
    "file": "",
    "mappings": "8CAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC",
    "names": [],
    "sources": [
      "",
    ],
    "sourcesContent": [
      null,
    ],
    "version": 3,
  },
}
`;

exports[`transform > transform script setup 1`] = `
{
  "code": "<script lang=\\"ts\\"> export default {name: 'App'}</script><script setup lang=\\"ts\\" name=\\"App\\">// placeholder </script>",
  "map": SourceMap {
    "file": "",
    "mappings": "wDAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC",
    "names": [],
    "sources": [
      "",
    ],
    "sourcesContent": [
      null,
    ],
    "version": 3,
  },
}
`;
